Added support for non-linear normalization in normalizeChIP.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1520 3f7291af-367f-0410-92d8-b778034d9185

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2013/02/26
 Title: ChIP-seq Analysis with Windows
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
-Depends: R (>= 2.15.0), GenomicRanges, Rsamtools, edgeR
+Depends: R (>= 2.15.0), GenomicRanges, Rsamtools, edgeR, limma
 Suggests:
 biocViews: Bioinformatics, HighThroughputSequencing, ChIP-Seq
 Description: Efficient counts for sliding windows in ChIP-seq data
