Updated NAMESPACE for proper importing of required packages.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1548 3f7291af-367f-0410-92d8-b778034d9185

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,8 @@
-#  Calling the dynamic library.
+#  Calling the dynamic library
 useDynLib(csaw)
 
 #  All functions exported other than those starting with "."
 exportPattern("^[^\\.]")
 
-
-
+#  Importing required packages
+import(GenomicRanges,Rsamtools,edgeR,limma)
