--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: ChIP-seq Analysis with Windows
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 2.15.0), GenomicRanges, Rsamtools, edgeR, limma
-Suggests:
+Suggests: GenomicAlignments
 biocViews: Bioinformatics, HighThroughputSequencing, ChIP-Seq
 Description: Efficient counts for sliding windows in ChIP-seq data
 License: LGPL (>= 2)
