Migrated annotation C++ methods to use registration.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1770 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -1,5 +1,5 @@
 #  Calling the dynamic library
-useDynLib(csaw)
+useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
 #  All functions exported other than those starting with "."
 exportPattern("^[^\\.]")
