--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: csaw
-Version: 0.0.2
-Date: 2013/02/26
-Title: ChIP-seq Analysis with Windows
+Version: 0.99.0
+Date: 2014/06/21
+Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
-Depends: R (>= 2.15.0), GenomicRanges, Rsamtools, edgeR, limma
+Depends: R (>= 3.1.0), GenomicRanges
+Imports: Rsamtools, edgeR, limma
 Suggests: GenomicAlignments, GenomicFeatures, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: Bioinformatics, HighThroughputSequencing, ChIP-Seq
 Description: Efficient counts for sliding windows in ChIP-seq data
-License: LGPL (>= 2)
+License: GPL (>= 2)
