--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -1,8 +1,12 @@
 #  Calling the dynamic library
 useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
-#  All functions exported other than those starting with "."
-exportPattern("^[^\\.]")
+#  All functions exported, arranged by sequence of usage.
+export(correlateReads, getPETSizes,
+    regionCounts,windowCounts,countWindows,
+    normalizeChIP,
+    combineTests, getBestTest,mergeWindows,
+    plotRegion, detailRanges)
 
 #  Importing required packages
 import(GenomicRanges,Rsamtools,edgeR,limma)
