Moved tests into inst/ to avoid getting hit by CHECK, added a Bash script for manual checking. Added AnnotationDbi to suggests. Elaborated on buffer size choice in annotator.cpp.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1780 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.1.0), GenomicRanges
 Imports: Rsamtools, edgeR, limma
-Suggests: GenomicAlignments, GenomicFeatures, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
+Suggests: GenomicAlignments, GenomicFeatures, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene, AnnotationDbi
 biocViews: Bioinformatics, HighThroughputSequencing, ChIP-Seq
 Description: Efficient counts for sliding windows in ChIP-seq data
 License: GPL (>= 2)
