Added csawUsersGuide function, added vignettes for csaw.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1786 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -2,7 +2,8 @@
 useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
 #  All functions exported, arranged by sequence of usage.
-export(correlateReads, getPETSizes,
+export(csawUsersGuide,
+    correlateReads, getPETSizes,
     regionCounts,windowCounts,countWindows,
     normalizeChIP,
     combineTests, getBestTest,mergeWindows,
