--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -2,7 +2,7 @@ Package: csaw
 Version: 0.99.0
 Date: 2014/06/21
 Title: ChIP-seq analysis with windows
-Author: Aaron Lun <alun@wehi.edu.au>
+Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.1.0), GenomicRanges
 Imports: Rsamtools, edgeR, limma
