Fixed BiocViews to the current ones in BioC devel.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1850 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -7,6 +7,6 @@ Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.1.0), GenomicRanges
 Imports: Rsamtools, edgeR, limma
 Suggests: GenomicAlignments, GenomicFeatures, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene, AnnotationDbi
-biocViews: Bioinformatics, HighThroughputSequencing, ChIP-Seq
+biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing, Coverage, Genetics, Annotation
 Description: Detection of differentially bound regions in ChIP-seq data with sliding windows, with methods for normalization and proper FDR control.
 License: GPL-3
