Shuffled some suggests into imports, added methods.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1915 3f7291af-367f-0410-92d8-b778034d9185

--- a/packageBioc/DESCRIPTION
+++ b/packageBioc/DESCRIPTION
@@ -5,8 +5,8 @@ Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.1.0), GenomicRanges
-Imports: Rsamtools, edgeR, limma
-Suggests: GenomicAlignments, GenomicFeatures, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene, AnnotationDbi
+Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi, methods
+Suggests: GenomicAlignments, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing, Coverage, Genetics, Annotation
 Description: Detection of differentially bound regions in ChIP-seq data with sliding windows, with methods for normalization and proper FDR control.
 License: GPL-3
