Added export for classes, methods, new function names into NAMESPACE.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1916 3f7291af-367f-0410-92d8-b778034d9185

--- a/packageBioc/NAMESPACE
+++ b/packageBioc/NAMESPACE
@@ -3,11 +3,25 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
 #  All functions exported, arranged by sequence of usage.
 export(csawUsersGuide,
-    correlateReads, getPETSizes,
-    regionCounts,windowCounts,countWindows,
-    normalizeChIP,
-    combineTests, getBestTest,mergeWindows,
-    plotRegion, detailRanges)
+	correlateReads, getPETSizes,
+	regionCounts, windowCounts,
+	normalizeCounts, 
+	combineTests, getBestTest, mergeWindows,
+	detailRanges,
+	extractReads, readParam)
 
 #  Importing required packages
-import(GenomicRanges,Rsamtools,edgeR,limma)
+import(GenomicRanges,Rsamtools,
+	edgeR,limma,
+	GenomicFeatures,AnnotationDbi,
+	methods)
+
+#  Exporting classes and methods
+exportClasses(
+	readParam
+)
+
+exportMethods(
+	show, "$", "$<-"
+)
+
