Got rid of average method for SummarizedExperiment.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1934 3f7291af-367f-0410-92d8-b778034d9185

--- a/packageBioc/NAMESPACE
+++ b/packageBioc/NAMESPACE
@@ -22,6 +22,6 @@ exportClasses(
 )
 
 exportMethods(
-	show, "$", reform, normalize, average, asDGEList
+	show, "$", reform, normalize, asDGEList
 )
 
