Added additional imports for IRanges, S4Vectors, GenomeInfoDb.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1960 3f7291af-367f-0410-92d8-b778034d9185

--- a/packageBioc/NAMESPACE
+++ b/packageBioc/NAMESPACE
@@ -11,9 +11,11 @@ export(csawUsersGuide,
 	extractReads, readParam)
 
 #  Importing required packages
-import(GenomicRanges,Rsamtools,
-	edgeR,limma,
-	GenomicFeatures,AnnotationDbi,
+import(GenomicRanges, Rsamtools,
+	S4Vectors, IRanges, GenomeInfoDb,
+	edgeR, limma,
+	GenomicFeatures, AnnotationDbi,
+	GenomicAlignments,
 	methods)
 
 #  Exporting classes and methods
