--- a/packageBioc/DESCRIPTION
+++ b/packageBioc/DESCRIPTION
@@ -5,8 +5,8 @@ Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.1.0), GenomicRanges
-Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi, methods
-Suggests: GenomicAlignments, org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
+Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi, methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb
+Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing, Coverage, Genetics, Annotation
 Description: Detection of differentially bound regions in ChIP-seq data with sliding windows, with methods for normalization and proper FDR control.
 License: GPL-3
