Added C++/R code for profileSummit function, to examine coverage around putative binding sites.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2002 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,7 +3,7 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
 #  All functions exported, arranged by sequence of usage.
 export(csawUsersGuide,
-	correlateReads, getPETSizes,
+	correlateReads, getPETSizes, profileSummit,
 	regionCounts, windowCounts,
 	normalizeCounts, 
 	combineTests, getBestTest, mergeWindows,
