Added apkb function for length-normalized average abundances.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2018 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -5,7 +5,7 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 export(csawUsersGuide,
 	correlateReads, getPETSizes, profileSummit,
 	regionCounts, windowCounts,
-	normalizeCounts, 
+	normalizeCounts, apkb,
 	combineTests, getBestTest, mergeWindows,
 	detailRanges,
 	extractReads, readParam)
