Switched from apkb to scaledAverage/getWidths combo.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2074 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,12 +3,14 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
 #  All functions exported, arranged by sequence of usage.
 export(csawUsersGuide,
+	readParam,
 	correlateReads, getPETSizes, profileSummit,
 	regionCounts, windowCounts,
-	normalizeCounts, apkb,
+	getWidths,
+	normalizeCounts, scaledAverage,
 	combineTests, getBestTest, mergeWindows,
 	detailRanges,
-	extractReads, readParam)
+	extractReads)
 
 #  Importing required packages
 import(GenomicRanges, Rsamtools,
