Added findMaxima function, to find local maxima within a range.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2106 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -6,8 +6,8 @@ export(csawUsersGuide,
 	readParam,
 	correlateReads, getPETSizes, profileSummit,
 	regionCounts, windowCounts,
-	getWidths,
-	normalizeCounts, scaledAverage,
+	normalizeCounts, 
+	getWidths, scaledAverage, findMaxima,
 	combineTests, getBestTest, mergeWindows,
 	detailRanges,
 	extractReads)
