Narrowed imports with importFrom.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2130 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -16,9 +16,11 @@ export(csawUsersGuide,
 import(GenomicRanges, Rsamtools,
 	S4Vectors, IRanges, GenomeInfoDb,
 	edgeR, limma,
-	GenomicFeatures, AnnotationDbi,
-	GenomicAlignments,
 	methods)
+
+importFrom("GenomicAlignments", cigarWidthAlongReferenceSpace)
+importFrom("GenomicFeatures", exonsBy)
+importFrom("AnnotationDbi", select)
 
 #  Exporting classes and methods
 exportClasses(
