Renamed PET to PE throughout package.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2232 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -4,7 +4,7 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 #  All functions exported, arranged by sequence of usage.
 export(csawUsersGuide,
 	readParam, reformList, paramList, checkList,
-	correlateReads, getPETSizes, profileSites,
+	correlateReads, getPESizes, profileSites,
 	regionCounts, windowCounts,
 	normalizeCounts, 
 	getWidths, scaledAverage, findMaxima,
