Fixed bugs, improved parameter storage in windowCounts, regionCounts output. Revmoed unnecessary paramList function.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2283 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,7 +3,7 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 
 #  All functions exported, arranged by sequence of usage.
 export(csawUsersGuide,
-	readParam, reformList, paramList, checkList,
+	readParam, reformList, checkList,
 	correlateReads, getPESizes, profileSites,
 	regionCounts, windowCounts,
 	normalizeCounts, 
