Updated NAMESPACE, DESCRIPTION.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2324 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -4,6 +4,7 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 #  All functions exported, arranged by sequence of usage.
 export(csawUsersGuide,
 	readParam, reformList, checkList,
+	makeExtVector, "[.extVector",
 	correlateReads, getPESizes, profileSites,
 	regionCounts, windowCounts, strandedCounts,
 	normalizeCounts, 
