Updated DESCRIPTION, NAMESPACE.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2330 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -5,7 +5,8 @@ useDynLib(csaw, .registration=TRUE, .fixes="cxx_")
 export(csawUsersGuide,
 	readParam, reformList, checkList,
 	makeExtVector, "[.extVector",
-	correlateReads, getPESizes, profileSites,
+	correlateReads, profileSites,
+	getPESizes, dumpPE,
 	regionCounts, windowCounts, strandedCounts,
 	normalizeCounts, 
 	getWidths, scaledAverage, findMaxima,
