Added filterWindows function to facilitate filtering.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2334 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -9,7 +9,7 @@ export(csawUsersGuide,
 	getPESizes, dumpPE,
 	regionCounts, windowCounts, strandedCounts,
 	normalizeCounts, 
-	getWidths, scaledAverage, findMaxima,
+	getWidths, scaledAverage, findMaxima, filterWindows,
 	combineTests, getBestTest, mergeWindows,
 	detailRanges,
 	extractReads)
