Added upweightSummit, consolidateSizes.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2358 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -11,6 +11,7 @@ export(csawUsersGuide,
 	normalizeCounts, 
 	getWidths, scaledAverage, findMaxima, filterWindows,
 	combineTests, getBestTest, mergeWindows,
+	consolidateSizes, upweightSummit,
 	detailRanges,
 	extractReads)
 
