Added wrapper functions for combining, best testing of overlaps.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2445 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -12,6 +12,7 @@ export(csawUsersGuide,
 	getWidths, scaledAverage, findMaxima, filterWindows,
 	combineTests, getBestTest, mergeWindows,
 	consolidateSizes, upweightSummit,
+	combineOverlaps, getBestOverlaps, summitOverlaps,
 	detailRanges,
 	extractReads)
 
