--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2015/04/02
 Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
-Depends: GenomicRanges
+Depends: R (>= 3.2.0), GenomicRanges
 Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
         methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb
 Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
