Updated DESCRIPTION file.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2503 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: csaw
-Version: 1.1.28
-Date: 2015/04/02
+Version: 1.1.29
+Date: 2015/04/07
 Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
@@ -14,3 +14,4 @@ Description: Detection of differentially bound regions in ChIP-seq data
         with sliding windows, with methods for normalization and proper
         FDR control.
 License: GPL-3
+NeedsCompilation: yes
