Added the clusterFDR function.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2525 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -10,7 +10,7 @@ export(csawUsersGuide,
 	regionCounts, windowCounts, strandedCounts,
 	normalizeCounts, 
 	getWidths, scaledAverage, findMaxima, filterWindows,
-	combineTests, getBestTest, mergeWindows,
+	combineTests, getBestTest, mergeWindows, clusterFDR,
 	consolidateSizes, upweightSummit,
 	combineOverlaps, getBestOverlaps, summitOverlaps,
 	detailRanges,
