Added checkBimodality function with tests.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2611 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -14,6 +14,7 @@ export(csawUsersGuide,
 	consolidateSizes, upweightSummit,
 	combineOverlaps, getBestOverlaps, summitOverlaps,
 	detailRanges,
+	checkBimodality,
 	extractReads)
 
 #  Importing required packages
