Updated NEWS and stuff.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2663 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -18,7 +18,7 @@ export(csawUsersGuide,
 	extractReads)
 
 #  Importing required packages
-import(GenomicRanges, Rsamtools,
+import(GenomicRanges, SummarizedExperiment, Rsamtools,
 	S4Vectors, IRanges, GenomeInfoDb,
 	edgeR, 
 	methods)
