--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: csaw
-Version: 1.3.2
-Date: 2015/05/03
+Version: 1.3.4
+Date: 2015/05/14
 Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
-Depends: R (>= 3.2.0), GenomicRanges
+Depends: R (>= 3.2.0), GenomicRanges, SummarizedExperiment
 Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
         methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb
 Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
