Renamed normalizeCounts to normOffsets.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -8,7 +8,7 @@ export(csawUsersGuide,
 	correlateReads, maximizeCcf, profileSites, wwhm,
 	getPESizes, dumpPE,
 	regionCounts, windowCounts, strandedCounts,
-	normalizeCounts, 
+	normOffsets, 
 	getWidths, scaledAverage, findMaxima, filterWindows,
 	combineTests, getBestTest, mergeWindows, clusterFDR,
 	consolidateSizes, upweightSummit,
