--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: csaw
-Version: 1.5.0
-Date: 2015/10/06
+Version: 1.5.1
+Date: 2015/11/07
 Title: ChIP-seq analysis with windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.2.0), GenomicRanges, SummarizedExperiment
 Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
-        methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb
+	methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb,
+	BiocGenerics
 Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing,
         Coverage, Genetics, Annotation
