--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: csaw
 Version: 1.5.3
-Date: 2015-11-22
-Title: ChIP-seq Analysis with Windows
+Date: 2015-12-02
+Title: ChIP-Seq Analysis with Windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.3.0), GenomicRanges, SummarizedExperiment
