--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -20,7 +20,7 @@ export(csawUsersGuide,
 import(GenomicRanges, SummarizedExperiment, Rsamtools,
 	S4Vectors, IRanges, GenomeInfoDb,
 	edgeR, 
-	methods)
+	methods, Rhtslib)
 
 importFrom("GenomicAlignments", cigarWidthAlongReferenceSpace)
 importFrom("GenomicFeatures", exonsBy)
