Bug fixes for PE C++ code.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -6,7 +6,7 @@ export(csawUsersGuide,
 	readParam, reformList, checkList,
 	makeExtVector, "[.extVector",
 	correlateReads, maximizeCcf, profileSites, wwhm,
-	getPESizes, dumpPE,
+	getPESizes, 
 	regionCounts, windowCounts, strandedCounts,
 	getWidths, scaledAverage, findMaxima, filterWindows,
 	combineTests, getBestTest, mergeWindows, clusterFDR,
