Revert "Switched paired reads to C++ input via Rhtslib."
This reverts commit 97ce949b7d41bdff13abf2c4eef5efa2c406f51e.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -20,7 +20,7 @@ export(csawUsersGuide,
 import(GenomicRanges, SummarizedExperiment, Rsamtools,
 	S4Vectors, IRanges, GenomeInfoDb,
 	edgeR, 
-	methods, Rhtslib)
+	methods)
 
 importFrom("GenomicAlignments", cigarWidthAlongReferenceSpace)
 importFrom("GenomicFeatures", exonsBy)
