--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.3.0), GenomicRanges, SummarizedExperiment (>= 1.1.6)
 Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
 	methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb,
-	BiocGenerics, Rhtslib
+	BiocGenerics
 Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing,
         Coverage, Genetics, Annotation
@@ -16,4 +16,3 @@ Description: Detection of differentially bound regions in ChIP-seq data
         FDR control.
 License: GPL-3
 NeedsCompilation: yes
-LinkingTo: Rhtslib, zlibbioc
