--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -6,8 +6,7 @@ Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
 Depends: R (>= 3.3.0), GenomicRanges, SummarizedExperiment (>= 1.1.6)
 Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
-	methods, GenomicAlignments, S4Vectors, IRanges, GenomeInfoDb,
-	BiocGenerics, Rhtslib
+	methods, S4Vectors, IRanges, GenomeInfoDb, BiocGenerics, Rhtslib
 Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing,
         Coverage, Genetics, Annotation
