--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(csawUsersGuide,
 	getPESizes, 
 	regionCounts, windowCounts, strandedCounts,
 	getWidths, scaledAverage, findMaxima, filterWindows,
-	combineTests, getBestTest, mergeWindows, clusterFDR, controlClusterFDR,
+	combineTests, getBestTest, mergeWindows, clusterFDR, controlClusterFDR, clusterWindows,
 	consolidateSizes, upweightSummit,
 	combineOverlaps, getBestOverlaps, summitOverlaps,
 	detailRanges,
