Added consolidateClusters function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(csawUsersGuide,
 	regionCounts, windowCounts, strandedCounts,
 	getWidths, scaledAverage, findMaxima, filterWindows,
 	combineTests, getBestTest, mergeWindows, clusterFDR, controlClusterFDR, clusterWindows,
-	consolidateSizes, upweightSummit,
+	consolidateSizes, upweightSummit, consolidateClusters,
 	combineOverlaps, getBestOverlaps, summitOverlaps,
 	detailRanges,
 	checkBimodality,
