--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
         stats
 Suggests: org.Mm.eg.db, TxDb.Mmusculus.UCSC.mm10.knownGene
 biocViews: MultipleComparison, ChIPSeq, Normalization, Sequencing,
-        Coverage, Genetics, Annotation
+        Coverage, Genetics, Annotation, DifferentialPeakCalling
 Description: Detection of differentially bound regions in ChIP-seq data
         with sliding windows, with methods for normalization and proper
         FDR control.
