Added support for parallelization.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Date: 2016-08-04
 Title: ChIP-Seq Analysis with Windows
 Author: Aaron Lun <alun@wehi.edu.au>, Gordon Smyth <smyth@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
-Depends: R (>= 3.3.0), GenomicRanges, SummarizedExperiment (>= 1.1.6)
+Depends: R (>= 3.3.0), GenomicRanges, SummarizedExperiment (>= 1.1.6),
+        BiocParallel
 Imports: Rsamtools, edgeR, limma, GenomicFeatures, AnnotationDbi,
         methods, S4Vectors, IRanges, GenomeInfoDb, BiocGenerics, Rhtslib,
         stats
