Added empiricalFDR function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,10 @@ export(csawUsersGuide,
 	getPESizes, 
 	regionCounts, windowCounts, strandedCounts,
 	getWidths, scaledAverage, findMaxima, filterWindows,
-	combineTests, getBestTest, mergeWindows, clusterFDR, controlClusterFDR, clusterWindows,
+    mergeWindows, combineTests, getBestTest, empiricalFDR,
+    clusterFDR, controlClusterFDR, clusterWindows,
 	consolidateSizes, upweightSummit, consolidateClusters,
-	combineOverlaps, getBestOverlaps, summitOverlaps,
+	combineOverlaps, getBestOverlaps, summitOverlaps, empiricalOverlaps,
 	detailRanges,
 	checkBimodality,
 	extractReads)
