Added mixedClusters function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,10 @@ export(csawUsersGuide,
 	getPESizes, 
 	regionCounts, windowCounts, strandedCounts,
 	getWidths, scaledAverage, findMaxima, filterWindows,
-    mergeWindows, combineTests, getBestTest, empiricalFDR,
+    mergeWindows, combineTests, getBestTest, empiricalFDR, mixedClusters,
     clusterFDR, controlClusterFDR, clusterWindows,
 	consolidateSizes, upweightSummit, consolidateClusters,
-	combineOverlaps, getBestOverlaps, summitOverlaps, empiricalOverlaps,
+	combineOverlaps, getBestOverlaps, summitOverlaps, empiricalOverlaps, mixedOverlaps,
 	detailRanges,
 	checkBimodality,
 	extractReads)
